# causal-oncall

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD-LOG.md  DESIGN.md  DEVPOST.md  Dockerfile  LICENSE  PRODUCT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: lint.yml  mutmut.yml  test.yml
demo/: SCRIPT.md  SUBMISSION-CHECKLIST.md  dry-run-checklist.md
demo/wow_backups/: README.md
scripts/: _mcp_shape_snapshot.json  _probe_mcp_shape.py  prewarm.ps1  prewarm.sh  record_cassettes.py  seed_memory.py
src/causal_oncall/: __init__.py  _demo_wiring.py  adk_runtime.py  app.py  curator.py  dashboard.py  dynatrace_client.py  hypothesis_serialization.py  landing.py  memory_store.py  orchestrator.py  phoenix_tracer.py  slack_notifier.py  synthesizer.py  trace_broadcaster.py  trace_routes.py
src/causal_oncall/domain/: __init__.py  brief.py  evidence.py  exceptions.py  incident_record.py  problem_signature.py
src/causal_oncall/specialists/: __init__.py  anomaly_window.py  base.py  deploy_correlation.py  topology.py  triage.py  vuln_sec.py
src/causal_oncall/static/: dashboard.html  grail_event.html  landing.html
tests/: conftest.py
tests/contract/: test_dynatrace_client_contract.py  test_memory_store_contract.py
tests/contract/cassettes/: __init__.py  _cassette.py  _live_get_problem_context.json  test_execute_dql_against_real_mcp_returns_a_valid_query_result.json  test_get_problem_context_handles_known_test_problem_id.json  test_send_investigation_event_against_real_mcp_returns_an_event_id.json
tests/e2e/: test_demo_path.py
tests/fakes/: __init__.py  gemini.py  mongo.py  phoenix.py  vertex_embedder.py
tests/fixtures/incidents/: db_pool_exhaustion.json  deploy_induced_regression.json  payment_latency_spike.json  topology_cascade.json  vuln_as_root_cause.json
tests/fixtures/memory_seeds/: seed_10_resolved.json
tests/integration/: test_dashboard.py  test_landing.py  test_orchestrator_full_pipeline.py
tests/unit/: test_adk_runtime.py  test_curator.py  test_dashboard.py  test_dynatrace_client.py  test_hypothesis_serialization.py  test_landing.py  test_memory_store.py  test_orchestrator.py  test_phoenix_tracer.py  test_slack_notifier.py  test_specialists.py  test_synthesizer.py  test_trace_broadcaster.py  test_trace_routes.py
tests/unit/domain/: test_brief.py  test_evidence.py  test_incident_record.py  test_problem_signature.py
